fluxcd/components/netpol/postgres/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-operator
spec:
  podSelector:
    matchLabels:
      application: spilo
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: postgres-operator
      podSelector:
        matchLabels:
          app.kubernetes.io/name: postgres-operator
    ports:
    - port: 5432
      protocol: TCP
    - port: 8008
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
          app.kubernetes.io/name: vmagent
    ports:
    - port: 9187
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-spilo-kube-api
spec:
  podSelector:
    matchLabels:
      application: spilo
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: ${KUBE_API_CIDR}
    ports:
    - port: 6443
      protocol: TCP
